--- a/beast_scheme/funcs/RumAutomatizm.htm
+++ b/beast_scheme/funcs/RumAutomatizm.htm
@@ -19,6 +19,4 @@
 <br>
 <b>Функция вызывается из:</b>
 <li>RumAutomatizmID - запуск автоматизма на выполнение</li>
-<li>runAutomatizmFromPurpose - запуск автоматизма на выполнение с сохранением текущего состоняия гомеостатической цели</li>
-
-
+<li>runAutomatizmFromPurpose - запуск автоматизма на выполнение с сохранением текущего состояния гомеостатической цели</li>
