--- a/beast_scheme/funcs/SaveCurrentGomeoParams.htm
+++ b/beast_scheme/funcs/SaveCurrentGomeoParams.htm
@@ -12,7 +12,7 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция SaveCurrentGomeoParams</h1>
 </div>
 
-<b>Сохрнаить значения параметров гомеостаза в файле</b><br>
+<b>Сохранить значения параметров гомеостаза в файле</b><br>
 
 <br>
 
@@ -20,5 +20,3 @@
 <b>Функция вызывается из:</b>
 <li><a href="SetCurGomeoParams.htm">SetCurGomeoParams</a> - установка параметров гомеостаза с Пульта</li>
 <li><a href="gomeostazUpdate.htm">gomeostazUpdate</a> - корректировка жизненных параметров по каждому пульсу</li>
-
-
