--- a/beast_scheme/funcs/SentСonfusion.htm
+++ b/beast_scheme/funcs/SentСonfusion.htm
@@ -12,7 +12,7 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция SentСonfusion</h1>
 </div>
 
-<b>Показать непонимания, растерянность</b><br>
+<b>Показать непонимание, растерянность</b><br>
 <br>
 ОПИСАНИЕ<br>
 <br>
@@ -26,4 +26,3 @@
 <li><a href="xxxxx.htm">xxxxx</a></li>
 <li><a href="xxxxx.htm">xxxxx</a></li>
 <li><a href="xxxxx.htm">xxxxx</a></li>
-
