--- a/beast_scheme/funcs/SetAutomatizmBelief.htm
+++ b/beast_scheme/funcs/SetAutomatizmBelief.htm
@@ -25,12 +25,10 @@
 <li>linkCoomonAtmtzmToBrench - привязать общий автоматизм к активной ветке detectedActiveLastNodID</li>
 <li><a href="FormingMirrorAutomatizmFromList.htm">FormingMirrorAutomatizmFromList</a> - Формирование зеркальных автоматизмов на основе списка ответов</li>
 <li><a href="FormingMirrorAutomatizmFromTempList.htm">FormingMirrorAutomatizmFromTempList</a> - Создаются автоматизмы на основе общего шаблона ответов lib/mirror_basic_phrases_common.txt, привязанные к пусковой фразе, а не к узлу дерева</li>
-<li><a href="createNewMirrorAutomatizm.htm">createNewMirrorAutomatizm</a> - оздание зеркального автоматизма, повторяющего действия оператора в данных условиях</li>
+<li><a href="createNewMirrorAutomatizm.htm">createNewMirrorAutomatizm</a> - Создание зеркального автоматизма, повторяющего действия оператора в данных условиях</li>
 <li><a href="provokatorMirrorAutomatizm.htm">provokatorMirrorAutomatizm</a> - Создание автоматизма, передразнивающего действия оператора</li>
 <li>automatizmCorrection - корректируется успешность автоматизма</li>
 <li><a href="RunMakeAutomatizmsFromReflexes.htm">RunMakeAutomatizmsFromReflexes</a> - автоматизмы - для всех условных рефлексов: создавать ветку дерева автоматизма если такой еще нет</li>
 <li><a href="RunMakeAutomatizmsFromGeneticReflexes.htm">RunMakeAutomatizmsFromGeneticReflexes</a> - для всех безусловных рефлексов,
 создавать ветку дерева автоматизма если такой еще нет,
 создавать автоматизм</li>
-
-
