--- a/beast_scheme/funcs/SetCurGomeoParams.htm
+++ b/beast_scheme/funcs/SetCurGomeoParams.htm
@@ -14,11 +14,10 @@
 
 <b>Запрос с Пульта: Установка параметров гомеостаза с Пульта</b><br>
 <br>
-Определить базовые контексты при новых пераметрах гомеостаза baseContextUpdate()
+Определить базовые контексты при новых параметрах гомеостаза baseContextUpdate()
 	потом очистить сенсоры слов и стек слов и переактивировать Дерево понимания<br>
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="main.htm">main</a></li>
-
