--- a/beast_scheme/funcs/WritePultConsol.htm
+++ b/beast_scheme/funcs/WritePultConsol.htm
@@ -12,11 +12,9 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция WritePultConsol</h1>
 </div>
 
-<b>Вывести на консоль Пульта Сообщения накапливаются в WritePultConsolStr и откправлются с каждым пульсом</b><br>
+<b>Вывести на консоль Пульта Сообщения накапливаются в WritePultConsolStr и отправляются с каждым пульсом</b><br>
 
 <br>
 
 <br>
 <b>Функция вызывается из многих функций.</b>
-
-
