--- a/beast_scheme/funcs/loadAutomatizm.htm
+++ b/beast_scheme/funcs/loadAutomatizm.htm
@@ -12,12 +12,10 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция loadAutomatizm</h1>
 </div>
 
-<b>Загрузить автоматизмов из файла</b><br>
+<b>Загрузить автоматизмы из файла</b><br>
 
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li>automatizmInit - инициализирующий блок</li>
-
-
