--- a/beast_scheme/funcs/loadMentalTriggerAndActionArr.htm
+++ b/beast_scheme/funcs/loadMentalTriggerAndActionArr.htm
@@ -12,12 +12,10 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция loadMentalTriggerAndActionArr</h1>
 </div>
 
-<b>Загрузить образы ментального правила</b><br>
+<b>Загрузить образы ментальных правил</b><br>
 
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li>PsychicInit - инициализирующий блок - в порядке последовательности инициализаций</li>
-
-
