--- a/beast_scheme/funcs/loadPurposeImageFromIdArr.htm
+++ b/beast_scheme/funcs/loadPurposeImageFromIdArr.htm
@@ -12,12 +12,10 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция loadPurposeImageFromIdArr</h1>
 </div>
 
-<b>Загрузить образы</b><br>
+<b>Загрузить образы восприятия</b><br>
 
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li>UnderstandingTreeInit</li>
-
-
