--- a/beast_scheme/funcs/loadSituationImage.htm
+++ b/beast_scheme/funcs/loadSituationImage.htm
@@ -12,12 +12,10 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция loadSituationImage</h1>
 </div>
 
-<b>Загрузить образ</b><br>
+<b>Загрузить образы SituationImage</b><br>
 
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li>PsychicInit</li>
-
-
