--- a/beast_scheme/funcs/main.htm
+++ b/beast_scheme/funcs/main.htm
@@ -42,7 +42,7 @@
 <li><a href="GetWordsListForPult.htm">GetWordsListForPult</a> - выдать на пульт список слов в алфавитном порядке</li>
 <li><a href="GetWordTreeForPult.htm">GetWordTreeForPult</a> - образ дерева фраз для вывода на Пульт</li>
 <li><a href="SetActionFromPult.htm">SetActionFromPult</a> - акция с кнопок пульта</li>
-<li><a href="ActiveFromAction.htm">ActiveFromAction</a> - активировать дерево атовматизмов действием</li>
+<li><a href="ActiveFromAction.htm">ActiveFromAction</a> - активировать дерево автоматизмов действием</li>
 <li><a href="GetConditionReflexInfo.htm">GetConditionReflexInfo</a> - выдать таблицу условных рефлексов для http://go/pages/condition_reflexes.php</li>
 <li><a href="GetAutomatizmInfo.htm">GetAutomatizmInfo</a> - выдать на Пульт список автоматизмов</li>
 <li><a href="GetMentalAutomatizmInfo.htm">GetMentalAutomatizmInfo</a>- выдать на Пульт список ментальных автоматизмов</li>
@@ -57,8 +57,6 @@
 <li><a href="GetMentalAutomatizmTreeForPult.htm">GetMentalAutomatizmTreeForPult</a> - выдать список автоматизмов на Пульт</li>
 <li><a href="GetCur10lastRules.htm">GetCur10lastRules</a> - выдать Правила на Пульт</li>
 <li><a href="GetCur10lastMentalRules.htm">GetCur10lastMentalRules</a> - выдать ментальные Правила на Пульт</li>
-<li><a href="GetCicklesToPult.htm">GetCicklesToPult</a> - показать циелы размышления на Пульте</li>
+<li><a href="GetCicklesToPult.htm">GetCicklesToPult</a> - показать цели размышления на Пульте</li>
 <li><a href="RunMakeAutomatizmsFromReflexes.htm">RunMakeAutomatizmsFromReflexes</a> - для всех условных рефлексов создавать ветку дерева автоматизма и создать автоматизм для этой ветки.</li>
 <li><a href="GetImportanceToPult.htm">GetImportanceToPult</a> - показать объекты значимости на Пульте</li>
-
-
