--- a/beast_scheme/funcs/prepBetterOrWorseNow.htm
+++ b/beast_scheme/funcs/prepBetterOrWorseNow.htm
@@ -17,7 +17,7 @@
 ОСОБЕННОСТЬ: срабатывание только при изменении параметра (любого) от нормы в Плохо или наоборот,
 просто изменение Нормы не влияет, т.е. реально индицирует, что был выход Б.параметра из Нормы или возврат в Норму
 и то, на какую условную величину были изменения, влияющие на осознание настроения PsyBaseMood
-Возвращает величину измнения от -10 через 0 до 10<br>
+Возвращает величину изменения от -10 через 0 до 10<br>
 Меняться может не чаще раз в 1 пульс<br>
 Значение экспоненциально стремиться к пределам -10 и 10<br>
 Это имитирует ограничение природных распознавателей на число дискретов распознавания.
@@ -28,5 +28,3 @@
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="BetterOrWorseNow.htm">BetterOrWorseNow</a></li>
-
-
