--- a/beast_scheme/funcs/provokatorMirrorAutomatizm.htm
+++ b/beast_scheme/funcs/provokatorMirrorAutomatizm.htm
@@ -12,13 +12,11 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция provokatorMirrorAutomatizm</h1>
 </div>
 
-<b>В случае отсуствия автоматизма в данных условияхпослать оператору те же стимулы, чтобы посмотреть его реакцию.</b><br>
+<b>В случае отсутствия автоматизма в данных условиях послать оператору те же стимулы, чтобы посмотреть его реакцию.</b><br>
 <br>
 Создание автоматизма, повторяющего действия оператора в данных условиях<br>
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
-<li>noAutovatizmResult - отреагировать на отсуствие реакции - повторить автоматизм с большей силой Energy</li>
-
-
+<li>noAutovatizmResult - отреагировать на отсутствие реакции - повторить автоматизм с большей силой Energy</li>
