--- a/beast_scheme/funcs/setImportance.htm
+++ b/beast_scheme/funcs/setImportance.htm
@@ -12,7 +12,7 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция setImportance</h1>
 </div>
 
-<b>Фиксация значимости объекта ОБъективного восприятия всех декларированных видов в данных условиях</b><br>
+<b>Фиксация значимости объекта Объективного восприятия всех декларированных видов в данных условиях</b><br>
 <br>
 Значимость - величина от 0 до 10, приобретаемая объектов внимания в данной ситуации
 - берется из результата пробных действий и связывается ос всеми компонентами воспринимаемого в этих условиях.<br>
@@ -24,5 +24,3 @@
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="afterTreeActivation.htm">afterTreeActivation</a> - реакция после активации ветки дерева</li>
-
-
