--- a/beast_scheme/funcs/understandingSituation.htm
+++ b/beast_scheme/funcs/understandingSituation.htm
@@ -18,10 +18,10 @@
 func afterTreeActivation() - при каждой активации automatism_tree.go<br>
 и если было действия без ответа в течении 20 пульсов, то understandingSituation вызывается из
 func noAutovatizmResult()<br>
-т.е. оба деревав работают совместно при EvolushnStage > 3 и по каждой активации UnderstandingTree
+т.е. оба дерева работают совместно при EvolushnStage > 3 и по каждой активации UnderstandingTree
 добавляется эпизд памяти newEpisodeMemory()<br>
 <br>
-Аналогично дереву моторных автоматзмов, после активации могут быть ориентировочные рефлексы привлечения внимания.<br>
+Аналогично дереву моторных автоматизмов, после активации могут быть ориентировочные рефлексы привлечения внимания.<br>
 <br>
 При вызове может быть определен situationImageID или проставлен 0 и тогда образ ситуации определяется в самой функции.<br>
 <br>
@@ -34,7 +34,5 @@ activationType =2 - произвольная переактивация<br>
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="afterTreeActivation.htm">afterTreeActivation</a> - реакция после активации ветки дерева</li>
-<li><a href="infoFunc14.htm">infoFunc14</a> - ментально переактиваровать дерево понимания</li>
+<li><a href="infoFunc14.htm">infoFunc14</a> - ментально переактивировать дерево понимания</li>
 <li><a href="RunMentalAutomatizm.htm">RunMentalAutomatizm</a> - Запуск ментального автоматизма</li>
-
-
