--- a/beast_scheme/funcs/updateNewsConditions.htm
+++ b/beast_scheme/funcs/updateNewsConditions.htm
@@ -13,13 +13,11 @@
 </div>
 
 <b>Детектор нового выявляет новые условия</b><br>
-причинного (предшествовавшего имеющемуся рефлесу) стимула, пока не приводящего к рефлексу, в дополнение к условиям активного рефлекса (безусловного или условного).
-Чтобы сделать у.рефлекс нужно чтобы в ксловиях имеющегося рефлекса появился новый признак
+причинного (предшествовавшего имеющемуся рефлексу) стимула, пока не приводящего к рефлексу, в дополнение к условиям активного рефлекса (безусловного или условного).
+Чтобы сделать у. рефлекс нужно чтобы в условиях имеющегося рефлекса появился новый признак
 (пуск. стимул или слово). Т.е. перед пусковым стимулом нужно запостить слово.<br>
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="TerminateGeneticAllReflaxActions.htm">TerminateGeneticAllReflaxActions</a> - выдать на Пульт подряд акции массива ID БЕЗУСЛОВНЫХ рефлексов</li>
-
-
