--- a/beast_scheme/funcs/updatePsyMood.htm
+++ b/beast_scheme/funcs/updatePsyMood.htm
@@ -21,6 +21,4 @@
 <br>
 <b>Функция вызывается из:</b>
 <li>moodePulse</li>
-<li><a href="GetCurMood.htm">GetCurMood</a> - текущее самоощещение своего состояния</li>
-
-
+<li><a href="GetCurMood.htm">GetCurMood</a> - текущее самоощущение своего состояния</li>
