--- a/beast_scheme/funcs/wasChangingMoodCondition.htm
+++ b/beast_scheme/funcs/wasChangingMoodCondition.htm
@@ -13,8 +13,8 @@
 </div>
 
 <b>Определение эффекта реакции, негативный или позитивный: возвращает значение.</b><br>
-Стало лучше или хуже: величина измнения от -10 через 0 до 10<br>
-wellIDarr - стали лучше следующие г.параметры []int гоменостаза
+Стало лучше или хуже: величина изменения от -10 через 0 до 10<br>
+wellIDarr - стали лучше следующие г.параметры []int гомеостаза
 <br>
 
 <br>
