--- a/beast_scheme/funcs/loadMentalAutomatizm.htm
+++ b/beast_scheme/funcs/loadMentalAutomatizm.htm
@@ -12,12 +12,10 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция loadMentalAutomatizm</h1>
 </div>
 
-<b>Загрузить автоматизм</b><br>
+<b>Загрузить автоматизмы</b><br>
 
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li>mentalAutomatizmInit</li>
-
-
