--- a/beast_scheme/funcs/loadReflexTree.htm
+++ b/beast_scheme/funcs/loadReflexTree.htm
@@ -12,12 +12,10 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция loadReflexTree</h1>
 </div>
 
-<b>Загрузить записанное в файле дерево</b><br>
+<b>Загрузить записанное в файле дерево рефлексов</b><br>
 
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li>initReflexTree</li>
-
-
