--- a/beast_scheme/funcs/orientation.htm
+++ b/beast_scheme/funcs/orientation.htm
@@ -14,11 +14,9 @@
 
 <b>Выполнение общего ориентировочного рефлекса из активной ветки Дерева автоматизмов</b><br>
 <br>
-automatizmID: 0 - в активной ветке нет автоматзма, >0 - есть автоматизм<br>
+automatizmID: 0 - в активной ветке нет автоматизма, > 0 - есть автоматизм<br>
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="afterTreeActivation.htm">afterTreeActivation</a> - реакция после активации ветки дерева</li>
-
-
