--- a/beast_scheme/funcs/orientation_1.htm
+++ b/beast_scheme/funcs/orientation_1.htm
@@ -14,11 +14,9 @@
 
 <b>Автоматизма нет, если нужно действовать, то какой-то предположить и сразу проверить</b><br>
 <br>
-Стадия отсуствия опыта (автоматизма) в данных условиях.<br>
+Стадия отсутствия опыта (автоматизма) в данных условиях.<br>
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="orientation.htm">orientation</a> - Выполнение ориентировочного рефлекса из активной ветки Дерева автоматизмов</li>
-
-
