--- a/beast_scheme/funcs/prepareWordArr.htm
+++ b/beast_scheme/funcs/prepareWordArr.htm
@@ -12,12 +12,10 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция prepareWordArr</h1>
 </div>
 
-<b>Обработка накопившегося массива распознанных фраз, бъекты PurposeGeneticObject, объекты внимания высокой значимости и эпизодической памяти</b><br>
+<b>Обработка накопившегося массива распознанных фраз, объекты PurposeGeneticObject, объекты внимания высокой значимости и эпизодической памяти</b><br>
 
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="SleepPuls.htm">SleepPuls</a></li>
-
-
