--- a/beast_scheme/funcs/sortingForActions.htm
+++ b/beast_scheme/funcs/sortingForActions.htm
@@ -12,12 +12,10 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция sortingForActions</h1>
 </div>
 
-<b>Ортировка действий рефлексов по убыванию актуальной значимости их целей</b><br>
+<b>Сортировка действий рефлексов по убыванию актуальной значимости их целей</b><br>
 
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="activeReflexTree.htm">activeReflexTree</a> - активация дерева рефлексов</li>
-
-
