--- a/beast_scheme/package/importance.htm
+++ b/beast_scheme/package/importance.htm
@@ -20,12 +20,9 @@
 
 Сохраняется в файле importance.txt в формате ID|NodeAID|NodePID|Type|ObjectID|Value<br>
 
-Значимость - величина от -10 0 до 10, приобретаемая объектов внимания в данной ситуации
-- берется из результата пробных действий и связывается ос всеми компонентами воспринимаемого в этих условиях
+Значимости в коде проекта обычно имеют значения величин от -10 0 до 10, но в случае значимости эффекта от реагирования от -1 0 до 1, а в случаях усредненной значимости компонентов объекта Ответа (акты воздействия, фразы и отдельные слова, принимающие значимость фразы) не органичены в мину и плюс.
+В последнем случае такая значимость берется из Эффекта пробных действий и связывается ос всеми компонентами воспринимаемого в этих условиях
 функцией setImportance().<br>
-
-Оценке значимости подлежат элементы действия оператора:
-кнопки воздействия, фразы и отдельные слова, принимающие значимость фразы.<br>
 
 Значимость всегда определяется в контексте всех предшествующих условий,
 т.е. специфична для активностей деревьев автоматизмов и понимания.<br>
