--- a/report_nan/list.htm
+++ b/report_nan/list.htm
@@ -7,6 +7,8 @@
 60 Сенсорные распознаватели
 65 Эффекторы
 70 Область наследственно предопределенных реакций
+71 Базовые потребности
+72 Интегральное базовое состояние
 80 Условные рефлексы
 90 Автоматизмы
 100 Рефлексы мозжечка
@@ -14,9 +16,42 @@
 120 Правила
 130 Объекты произвольной значимости
 140 Эпизодическая память
+145 Модели понимания
+
 150 Четыре уровня обработки информации актуальных объектов внимания
 155 Ментальные автоматизмы и циклы ментальной рекурсии 
 160 Доминанта нерешенной проблемы и гештальт
 170 Планы дальнейшей реализации
 180 Почему обезьяна никогда не станет человеком (или почему так важно найти оптимальную версию данного уровня адаптивности).
 190 Что дальше?
+
+
+https://scorcher.ru/adaptologiya/beast/beast_scheme/beast.htm
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
