--- a/report_nan/list.htm
+++ b/report_nan/list.htm
@@ -17,7 +17,6 @@
 130 Объекты произвольной значимости
 140 Эпизодическая память
 145 Модели понимания
-
 150 Четыре уровня обработки информации актуальных объектов внимания
 155 Ментальные автоматизмы и циклы ментальной рекурсии 
 160 Доминанта нерешенной проблемы и гештальт
@@ -27,6 +26,8 @@
 
 
 https://scorcher.ru/adaptologiya/beast/beast_scheme/beast.htm
+
+/adaptologiya/beast/beast_scheme/package/mental_automatizm.htm
 
 
 
