--- a/scorcher/adaptologiya/beast/common_scheme.htm
+++ b/scorcher/adaptologiya/beast/common_scheme.htm
@@ -2,11 +2,11 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Общая принципиальная схема Beast</title>
+  <title>РћР±С‰Р°СЏ РїСЂРёРЅС†РёРїРёР°Р»СЊРЅР°СЏ СЃС…РµРјР° Beast</title>
   <link rel="stylesheet" href="sys/common.css">
 </head>
 <body style="margin-left:20px;font-family:arial;font-size:14px;">
 
-<h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Общая принципиальная схема Beast</h1>
+<h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>РћР±С‰Р°СЏ РїСЂРёРЅС†РёРїРёР°Р»СЊРЅР°СЏ СЃС…РµРјР° Beast</h1>
 
 <img src="report_img/graf_beast.png" border=0 >
