добавлена общая схема
В site_report - html-копия отчета
в scorcher - папка для глобального сайта

--- a/scorcher/adaptologiya/beast/beast_scheme/beast.htm
+++ b/scorcher/adaptologiya/beast/beast_scheme/beast.htm
@@ -11,7 +11,10 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Схема Beast</h1>
 </div>
 
+<a href="../common_scheme.htm" target="_blank">Общая принципиальная схема Beast</a><br>
+<a href="common_scheme.htm" target="_blank">Краткое описание общей схемы</a><br>
 
+<br>
 Схема Beast начинается с <a href="funcs/main.htm">Главной функции</a> и имеет несколько основных блоков:
 <li>Пакет lib – вспомогательные функции для работы с файлами, массивами и строками, в так же <a href="package/pul_out.htm">вывод действий на Пульт</a></li>
 <li>Пакет <a href="package/braine.htm">braine</a> - общая инициализация, водитель пульса, сохранение памяти</li>
